src/test/resources/parse/DuplicateOvrd.out
error: Duplicate `ovrd` keyword
--> ./DuplicateOvrd.casc:4:4
3 | impl DuplicateOvrd {
4 |     ovrd ovrd fn a1() {}
        ^^^^= hint: Encountered first one here
error: Duplicate `ovrd` keyword
--> ./DuplicateOvrd.casc:4:9
3 | impl DuplicateOvrd {
4 |     ovrd ovrd fn a1() {}
             ^^^^= hint: Duplicate here