src/test/resources/parse/DuplicateOvrd.casc
class DuplicateOvrd

impl DuplicateOvrd {
    ovrd ovrd fn a1() {}
}